--- a/LambdaManBoardUtil.Backend.CSharp/LambdaManBoardUtil/LambdaManBoardUtil.csproj
+++ b/LambdaManBoardUtil.Backend.CSharp/LambdaManBoardUtil/LambdaManBoardUtil.csproj
@@ -57,6 +57,7 @@
     <Compile Include="BoardFrame.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RequestFrame.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
